objects/CC_OO_PlantCutOff__c.object
<CustomObject>
    <fields>
        <fullName>cc_oo_AMPM__c</fullName>
        <label>AM / PM</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_DSTFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DST Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cc_oo_DaysOverStandardLead__c</fullName>
        <label>Days Over Standard Lead</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cc_oo_Days__c</fullName>
        <label>Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cc_oo_DwChecksum__c</fullName>
        <label>Checksum</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>55</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>cc_oo_FullTruckLoad__c</fullName>
        <label>Full Truck Load</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cc_oo_IncludeONWeb__c</fullName>
        <label>Include ON Web</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_LoadingWeightPer12Hour__c</fullName>
        <label>Loading Weight per 1/2 Hour</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cc_oo_OrderMinumum__c</fullName>
        <label>Order Minumum</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cc_oo_PickupAdjustmentAmount__c</fullName>
        <label>Pickup Adjustment Amount</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cc_oo_PlantCutoffTime__c</fullName>
        <label>Plant Cutoff Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_PlantType__c</fullName>
        <label>Plant Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_Plant__c</fullName>
        <label>Plant</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_ProductType__c</fullName>
        <label>Product Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_Seller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Seller</label>
        <referenceTo>ccrz__E_Seller__c</referenceTo>
        <relationshipLabel>CC OO Plant CutOff</relationshipLabel>
        <relationshipName>CC_OO_Plant_CutOff</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cc_oo_ShippingMethod__c</fullName>
        <label>Shipping Method</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_SmallOrderWeight__c</fullName>
        <label>Small Order Weight</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cc_oo_TimeZone__c</fullName>
        <label>Time Zone</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>CC OO Plant CutOff</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>cc_oo_Seller__c</columns>
        <columns>cc_oo_ProductType__c</columns>
        <columns>cc_oo_PlantCutoffTime__c</columns>
        <columns>cc_oo_AMPM__c</columns>
        <columns>cc_oo_TimeZone__c</columns>
        <columns>cc_oo_IncludeONWeb__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Plant CutOff Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC OO Plant CutOff</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>